--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-    <h1>Random NPC generator</h1>
-    
+    <div class="container">
+        <h1 class="mb-4">Random NPC generator</h1>
+        <h4>Livello Caos</h4>
+        <input type="number" name="livelloCaos" id="livelloCaos">
+        
+    </div>
 
 
 
