--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div class="container">
         <h1 class="mb-4">Random NPC generator</h1>
         <h4>Livello Caos</h4>
-        <input type="number" name="livelloCaos" id="livelloCaos">
+        <input type="number" name="livelloCaos" id="livelloCaos" class="mb-4">
         
+
+
     </div>
 
 
