--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <h1 class="mb-4">Random NPC generator</h1>
         <h4>Livello Caos</h4>
         <input type="number" name="livelloCaos" id="livelloCaos" class="mb-4">
-        
+        <h3>Il tuo NPC:</h3>
+        <h5 id="risultatoNPC" class="fst-italic">
+            Il tuo personaggio comparira' qui.
+        </h5>
 
 
     </div>
