--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h4>Livello Caos</h4>
         <input type="number" name="livelloCaos" id="livelloCaos" class="mb-4">
         <h3>Il tuo NPC:</h3>
-        <h5 id="risultatoNPC" class="fst-italic">
+        <h5 id="risultatoNPC" class="fst-italic mb-4">
             Il tuo personaggio comparira' qui.
         </h5>
         <a class="btn btn-primary" href="#" onclick="generaNpc()">Genera</a>
