--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h1 class="mb-4" style="color: blue;">Random NPC generator</h1>
+        <h1 class="mb-4" style="color: violet;">Random NPC generator</h1>
         <h4>Livello Caos</h4>
         <input type="number" name="livelloCaos" id="livelloCaos" class="mb-4">
         <h3>Il tuo NPC:</h3>
