--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
@@ -12,14 +13,25 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="mb-4" style="color: grey;">Random NPC generator</h1>
-        <h4>Livello Caos</h4>
-        <input type="number" name="livelloCaos" id="livelloCaos" class="mb-4">
+    <div class="container-fluid p-3 bg-grigino ">
+        <h1 class="rimuovi-margine" style="color: grey;">Random NPC generator</h1>
+    </div>
+    <div class="container-fluid p-4">
+    <h4><span class="badge text-bg-warning">Livello Caos  Min: 1 | Max: 9</span></h4>
+
+        <input type="number" name="livelloCaos" id="livelloCaos" class="mb-4" value="1">
+
+        <div class="alert alert-secondary" role="alert">
+            <h4>Come funziona?</h4>
+            <p>Il generatore fornirà un aggettivo ed un sostantivo descrittivi dell'NPC. E' possibile poi generare anche 3 motivazioni dell NPC che vanno a fornire una descrizione sommaria degli argomenti di cui tratta l NPC o quali sono i suoi scopi. I risultati sono ovviamente da interpretare e sentitevi liberi di rigenerare i risultati.</p>
+        </div>
+
         <h3>Il tuo NPC:</h3>
+
         <h5 id="risultatoNPC" class="fst-italic mb-4">
             Il tuo personaggio comparira' qui.
         </h5>
+
         <a class="btn btn-primary bottone-genera" onclick="generaNpc()">Genera</a>
 
 
